[package]
name = "to_sql_condition"
version = "0.1.0"
authors = ["sokach"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.51"
quote = "1.0.23"
syn = {version = "1.0.109", features = ["extra-traits"]}
