[package]
name = "to_sql_condition"
version = "0.2.1"
authors = ["sokach-dev@hotmail.com"]
edition = "2021"
repository = "https://github.com/sokach-dev/tosql"
description = "a simple genreate sql condition proc macro"
license = "MIT"
keywords = ["sql", "tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.51"
quote = "1.0.23"
syn = {version = "1.0.109", features = ["extra-traits"]}
